--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,11 @@ AS_VERSION(gst-plugins, GST_PLUGINS, 0, 3, 3, 2)
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
 AS_LIBTOOL(GST_PLUGINS, 0, 0, 0, yes)
 
+dnl we'll move this to a configure option later on which will be turned on
+dnl by autogen
+dnl GST_ERROR="-Wall -Werror"
+GST_ERROR="-Wall"
+
 dnl FIXME take something else ?
 AC_CONFIG_SRCDIR([gst/law/alaw.c])
 AM_CONFIG_HEADER(config.h)
