--- a/gst-plugins.spec.in
+++ b/gst-plugins.spec.in
@@ -627,20 +627,20 @@ fi
 @USE_V4L_TRUE@%{prefix}/bin/gst-register --gst-mask=0 2> /dev/null
 
 ### XVIDEO ###
-@USE_XVIDEO_TRUE@%package -n gstreamer-xvideosink
-@USE_XVIDEO_TRUE@Summary: Gstreamer XFree output plugin
-@USE_XVIDEO_TRUE@Group: Libraries/Multimedia
-@USE_XVIDEO_TRUE@Requires: gstreamer-plugins >= %{version}
-@USE_XVIDEO_TRUE@Requires: Hermes => 1.3.0
-@USE_XVIDEO_TRUE@%description -n gstreamer-xvideosink
-@USE_XVIDEO_TRUE@Xfree86 video sink
-@USE_XVIDEO_TRUE@
-@USE_XVIDEO_TRUE@%files -n gstreamer-xvideosink
-@USE_XVIDEO_TRUE@%defattr(-, root, root)
-@USE_XVIDEO_TRUE@%{prefix}/lib/gst/libgstxvideosink*
-@USE_XVIDEO_TRUE@
-@USE_XVIDEO_TRUE@%post -n gstreamer-xvideosink
-@USE_XVIDEO_TRUE@%{prefix}/bin/gst-register --gst-mask=0 2> /dev/null
+# @USE_XVIDEO_TRUE@%package -n gstreamer-xvideosink
+# @USE_XVIDEO_TRUE@Summary: Gstreamer XFree output plugin
+# @USE_XVIDEO_TRUE@Group: Libraries/Multimedia
+# @USE_XVIDEO_TRUE@Requires: gstreamer-plugins >= %{version}
+# @USE_XVIDEO_TRUE@Requires: Hermes => 1.3.0
+# @USE_XVIDEO_TRUE@%description -n gstreamer-xvideosink
+# @USE_XVIDEO_TRUE@Xfree86 video sink
+# @USE_XVIDEO_TRUE@
+# @USE_XVIDEO_TRUE@%files -n gstreamer-xvideosink
+# @USE_XVIDEO_TRUE@%defattr(-, root, root)
+# @USE_XVIDEO_TRUE@%{prefix}/lib/gst/libgstxvideosink*
+# @USE_XVIDEO_TRUE@
+# @USE_XVIDEO_TRUE@%post -n gstreamer-xvideosink
+# @USE_XVIDEO_TRUE@%{prefix}/bin/gst-register --gst-mask=0 2> /dev/null
 
 @USE_XVIDEO_TRUE@%package -n gstreamer-videosink
 @USE_XVIDEO_TRUE@Summary: GStreamer Video Sink
