seeking uses gtk
Original commit message from CVS:
seeking uses gtk

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,3 +1,9 @@
-SUBDIRS=dynparams seeking
+if HAVE_GTK
+SEEKING=seeking
+else
+SEEKING=
+endif
+
+SUBDIRS=dynparams $(SEEKING)
 
 DIST_SUBDIRS=capsfilter dynparams seeking
