--- a/tests/old/examples/Makefile.am
+++ b/tests/old/examples/Makefile.am
@@ -1,3 +1,9 @@
-SUBDIRS=dynparams seeking
+if HAVE_GTK
+SEEKING=seeking
+else
+SEEKING=
+endif
+
+SUBDIRS=dynparams $(SEEKING)
 
 DIST_SUBDIRS=capsfilter dynparams seeking
