taaz's virtual fix
Original commit message from CVS:
taaz's virtual fix

--- a/configure.ac
+++ b/configure.ac
@@ -381,14 +381,19 @@ translit(dnm, m, l) AM_CONDITIONAL(USE_CDPARANOIA, true)
 GST_CHECK_FEATURE(CDPARANOIA, [CDParanoia], cdparanoia, [
   GST_CHECK_LIBHEADER(CDPARANOIA, cdda_interface, 
                       cdda_open, -lm, 
-                      cdda/cdda_interface.h, 
-                      CDPARANOIA_LIBS="-lcdda_interface -lcdda_paranoia"
-                      HEADER_DIR="yes")
-  GST_CHECK_LIBHEADER(CDPARANOIA, cdda_interface, 
-                      cdda_open, -lm, 
                       cdda_interface.h, 
                       CDPARANOIA_LIBS="-lcdda_interface -lcdda_paranoia"
-                      HEADER_DIR="no")
+                      HEADER_DIR="no"
+                      FOUND_CDPARANOIA="yes")
+  if test "x$FOUND_CDPARANOIA" != "xyes";
+  then
+    GST_CHECK_LIBHEADER(CDPARANOIA, cdda_interface, 
+                        cdda_open, -lm, 
+                        cdda/cdda_interface.h, 
+                        CDPARANOIA_LIBS="-lcdda_interface -lcdda_paranoia"
+                        HEADER_DIR="yes"
+                        FOUND_CDPARANOIA="yes")
+  fi
   if test "x$HEADER_DIR" = "xyes";
   then
     AC_DEFINE_UNQUOTED(CDPARANOIA_HEADERS_IN_DIR, ,
@@ -402,8 +407,9 @@ dnl AC_CHECK_HEADER(cdda_paranoia.h, :, HAVE_CDPARANOIA=no)
 
 dnl *** dv ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_DV, true)
-GST_CHECK_FEATURE(DV, [dv library], dv, [
-  AM_PATH_LIBDV(HAVE_DV=yes, HAVE_DV=no)
+GST_CHECK_FEATURE(DV, [libdv DV/video decoder], dvdec, [
+  PKG_CHECK_MODULES(DV, libdv, HAVE_DV="yes", HAVE_DV="no")
+  AC_SUBST(DV_CFLAGS)
   AC_SUBST(DV_LIBS)
 ])
 
