--- a/ext/Makefile.am
+++ b/ext/Makefile.am
@@ -46,10 +46,10 @@ else
 CDPARANOIA_DIR=
 endif
 
-if USE_LIBDV
-LIBDV_DIR=dv
+if USE_DV
+DV_DIR=dv
 else
-LIBDV_DIR=
+DV_DIR=
 endif
 
 if USE_DVDREAD
@@ -228,7 +228,7 @@ endif
 
 SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
         $(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
-	$(AVIFILE_DIR) $(CDPARANOIA_DIR) $(LIBDV_DIR) \
+	$(AVIFILE_DIR) $(CDPARANOIA_DIR) $(DV_DIR) \
 	$(DVDREAD_DIR) $(DVDNAV_DIR) $(ESD_DIR) \
 	$(FLAC_DIR) $(GNOMEVFS_DIR) $(GSM_DIR) \
 	$(HERMES_DIR) $(HTTP_DIR) $(JACK_DIR) $(JPEG_DIR) \
