--- a/gst-plugins.spec.in
+++ b/gst-plugins.spec.in
@@ -374,13 +374,11 @@ Plug-ins for playback of AVI format media files.
 @USE_DVDREAD_TRUE@Obsoletes:     gstreamer-libdvd
 @USE_DVDREAD_TRUE@
 @USE_DVDREAD_TRUE@%description -n gstreamer-libdvdread
-@USE_DVDREAD_TRUE@Plug-in for reading DVDs using libdvdread and libdvdnav 
-@USE_DVDREAD_TRUE@under GStreamer.
+@USE_DVDREAD_TRUE@Plug-in for reading DVDs using libdvdread under GStreamer.
 @USE_DVDREAD_TRUE@
 @USE_DVDREAD_TRUE@%files -n gstreamer-libdvdread
 @USE_DVDREAD_TRUE@%defattr(-, root, root)
 @USE_DVDREAD_TRUE@%{_libdir}/gst/libgstdvdreadsrc.so
-@USE_DVDREAD_TRUE@%{_libdir}/gst/libgstdvdnavsrc.so
 @USE_DVDREAD_TRUE@
 @USE_DVDREAD_TRUE@%post -n gstreamer-libdvdread
 @USE_DVDREAD_TRUE@%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
@@ -389,6 +387,30 @@ Plug-ins for playback of AVI format media files.
 @USE_DVDREAD_TRUE@%postun -n gstreamer-libdvdread
 @USE_DVDREAD_TRUE@%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
 @USE_DVDREAD_TRUE@%{_bindir}/gst-compprep > /dev/null 2> /dev/null
+
+### DVDNAV ###
+@USE_DVDNAV_TRUE@%package -n gstreamer-libdvdnav
+@USE_DVDNAV_TRUE@Summary:       GStreamer plug-in for DVD playback.
+@USE_DVDNAV_TRUE@Group:         Libraries/Multimedia
+@USE_DVDNAV_TRUE@Requires:      gstreamer-plugins = %{version}
+@USE_DVDNAV_TRUE@Requires:      libdvdnav >= 0.1.3
+@USE_DVDNAV_TRUE@BuildRequires: libdvdnav-devel >= 0.1.3
+@USE_DVDNAV_TRUE@Obsoletes:     gstreamer-libdvd
+@USE_DVDNAV_TRUE@
+@USE_DVDNAV_TRUE@%description -n gstreamer-libdvdnav
+@USE_DVDNAV_TRUE@Plug-in for reading DVDs using libdvdnav  under GStreamer.
+@USE_DVDNAV_TRUE@
+@USE_DVDNAV_TRUE@%files -n gstreamer-libdvdnav
+@USE_DVDNAV_TRUE@%defattr(-, root, root)
+@USE_DVDNAV_TRUE@%{_libdir}/gst/libgstdvdnavsrc.so
+@USE_DVDNAV_TRUE@
+@USE_DVDNAV_TRUE@%post -n gstreamer-libdvdnav
+@USE_DVDNAV_TRUE@%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
+@USE_DVDNAV_TRUE@%{_bindir}/gst-compprep > /dev/null 2> /dev/null
+@USE_DVDNAV_TRUE@
+@USE_DVDNAV_TRUE@%postun -n gstreamer-libdvdnav
+@USE_DVDNAV_TRUE@%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
+@USE_DVDNAV_TRUE@%{_bindir}/gst-compprep > /dev/null 2> /dev/null
 
 ## DXR3 ###
 @USE_DXR3_TRUE@%package -n gstreamer-dxr3
@@ -1482,6 +1504,9 @@ This package contains a basic audio and video playback library.
 
 #
 %changelog
+* Wed Oct 30 2002 Thomas Vander Stichele <thomas at apestaart dot org>
+- split out dvdnavread package
+
 * Wed Oct 30 2002 Thomas Vander Stichele <thomas at apestaart dot org>
 - fixed snapshot deps and added hermes conditionals
 
