--- a/gst-plugins.spec.in
+++ b/gst-plugins.spec.in
@@ -122,14 +122,14 @@ GStreamer support libraries header files.
 
 %files -n gstreamer-plugins-devel
 %defattr(-, root, root)
-%{_includedir}/gstreamer-%{majorminor}/gst/audio/audio.h
-%{_includedir}/gstreamer-%{majorminor}/gst/floatcast/floatcast.h
 %{_includedir}/gstreamer-%{majorminor}/gst/gconf/gconf.h
-%{_includedir}/gstreamer-%{majorminor}/gst/idct/idct.h
-%{_includedir}/gstreamer-%{majorminor}/gst/resample/resample.h
-%{_includedir}/gstreamer-%{majorminor}/gst/riff/riff.h
-%{_includedir}/gstreamer-%{majorminor}/gst/video/video.h
 %{_includedir}/gstreamer-%{majorminor}/gst/play/play.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/audio/audio.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/floatcast/floatcast.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/idct/idct.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/resample/resample.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/riff/riff.h
+### %{_includedir}/gstreamer-%{majorminor}/gst/video/video.h
 %{_datadir}/aclocal/gst-element-check-%{majorminor}.m4
 %{_libdir}/pkgconfig/gstreamer-libs-%{majorminor}.pc
 %{_libdir}/pkgconfig/gstreamer-play-%{majorminor}.pc
@@ -734,7 +734,7 @@ Plug-ins for playback of AVI format media files.
 @USE_LIBPNG_TRUE@
 @USE_LIBPNG_TRUE@%files -n gstreamer-libpng
 @USE_LIBPNG_TRUE@%defattr(-, root, root)
-@USE_LIBPNG_TRUE@%{_libdir}/gstreamer-%{majorminor}/libgstlibpng.so
+@USE_LIBPNG_TRUE@%{_libdir}/gstreamer-%{majorminor}/libgstpng.so
 @USE_LIBPNG_TRUE@
 @USE_LIBPNG_TRUE@%post -n gstreamer-libpng
 @USE_LIBPNG_TRUE@%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
@@ -1177,7 +1177,6 @@ integer to float conversion, LAW conversion and level detection plug-ins.
 %{_libdir}/gstreamer-%{majorminor}/libgstcutter.so
 %{_libdir}/gstreamer-%{majorminor}/libgstfilter.so
 %{_libdir}/gstreamer-%{majorminor}/libmixmatrix.so
-@USE_LIBPNG_TRUE@%{_libdir}/gstreamer-%{majorminor}/libgstpng.so
 
 %post -n gstreamer-audio-effects
 %{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
